testdata/baselines/reference/submodule/compiler/methodSignatureHandledDeclarationKindForSymbol.errors.txt
methodSignatureHandledDeclarationKindForSymbol.ts(2,5): error TS2300: Duplicate identifier 'bold'.
methodSignatureHandledDeclarationKindForSymbol.ts(6,5): error TS2300: Duplicate identifier 'bold'.


==== methodSignatureHandledDeclarationKindForSymbol.ts (2 errors) ====
    interface Foo {
        bold(): string;
        ~~~~
!!! error TS2300: Duplicate identifier 'bold'.
    }
    
    interface Foo {
        bold: string;
        ~~~~
!!! error TS2300: Duplicate identifier 'bold'.
    }
    
    